--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/todolist
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db
 spring.datasource.username=root
-spring.datasource.password=maks99km
+spring.datasource.password=123456
