--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/todolist
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=maks99km
